# swift-api-rest-rs

./: .gitignore  Cargo.toml  README.md  configure.sh
src/: db.rs  main.rs  models.rs  tests.rs
