[package]
name = "swift-api-rest-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.7", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
